<resources>
    <string name="app_name">小狼助手</string>
    <string name="new_version">新版本</string>
    <string name="discover_new_releases">发现新版本</string>
    <string name="preview_version">预览版</string>
    <string name="release_version">正式版</string>
    <string name="version_number">版本号：%1$s</string>
    <string name="release_type">版本类型：</string>
    <string name="calculating">正在计算中……</string>
    <string name="account_settings">账户设置</string>
    <string name="log_out">退出登录</string>
    <string name="log_out_of_your_current_account">退出当前账号</string>
    <string name="app_settings">应用设置</string>
    <string name="clear_cache">清除缓存</string>
    <string name="current_cache_occupancy">当前缓存占用：%1$s</string>
    <string name="about">关于</string>
    <string name="code_repositories">代码仓库</string>
    <string name="check_for_app_version_updates">检查应用版本更新</string>
    <string name="check_for_updates">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="log_out_warning">您确定要退出当前账号吗？此操作不可撤销。</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="checking">检查中……</string>
    <string name="latest_version">当前为最新版本哦~</string>
    <string name="loading_text">正在加载中，先舒展一下身体吧~</string>
    <string name="back">返回</string>
    <string name="go_back_to_the_current_week">返回当前周</string>
    <string name="browser_menu">浏览器菜单</string>
    <string name="please_wait">小主请稍等~</string>
    <string name="friends">小伙伴</string>
    <string name="recharge">充值</string>
    <string name="campus_card">校园卡</string>
    <string name="load_fail">加载失败了（悲）</string>
    <string name="reason">原因：</string>
    <string name="watting_for_loading">等待加载中~</string>
    <string name="on_the_way">内容正在赶来的路上哦~</string>
    <string name="academic_number">学号</string>
    <string name="enter_num">请输入学号</string>
    <string name="password">密码</string>
    <string name="enter_passwd">请输入密码</string>
    <string name="show_passwd">显示密码</string>
    <string name="hide_passwd">隐藏密码</string>
    <string name="id_passwd_note_empty">请确保账号密码不为空！</string>
    <string name="login">登录</string>
    <string name="login_failed">登录失败！</string>
    <string name="login_warning">您的账户密码将会保存至本地</string>
    <string name="loading_failed">加载失败: %1$s</string>
    <string name="retry">重试</string>
    <string name="load_more_failed">加载更多失败：%1$s</string>
    <string name="announcement">公告</string>
    <string name="xgxt">学工系统</string>
    <string name="name">姓名：%1$s</string>
    <string name="class_name">班级：%1$s</string>
    <string name="identity">身份：%1$s</string>
    <string name="loading_card">正在加载您的个人卡片……</string>
    <string name="settings">设置</string>
    <string name="open_source_license">开源许可</string>
    <string name="third_party_open_source_licenses">第三方开放源代码许可</string>
    <string name="avatar">头像</string>
    <string name="allow_camera_permission">请先允许相机权限哦~</string>
    <string name="go_to_setting_page">点我转到设置界面</string>
    <string name="has_allow_text">如果已经允许了再点点下面按钮试试？👇</string>
    <string name="pull_up_the_authorization">拉起授权</string>
    <string name="classroom_location">教室地点：%1$s</string>
    <string name="start_time">开始时间：%1$s</string>
    <string name="end_time">结束时间：%1$s</string>
    <string name="cant_pull_up_app">无法调起应用，请检查是否安装了相关应用！</string>
    <string name="pulling_tokens">正在拉取令牌，请稍等~</string>
    <string name="share_it_via">通过以下方式分享</string>
    <string name="share">分享</string>
    <string name="refresh">刷新</string>
    <string name="payment_code">付款码</string>
    <string name="scan">扫一扫</string>
    <string name="schedule">课表</string>
    <string name="choose_file">选择文件</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_gallery">从相册选择</string>
</resources>
